<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

<LinearLayout
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Profile Picture -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="16dp">
        
        <ImageView
            android:id="@+id/ivFragmentProfilePicture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:contentDescription="Profile Picture"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <!-- Name -->
    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvFragmentName"
        android:text="—"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"/>

    <!-- Email -->
    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvFragmentEmail"
        android:text="—"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"/>

    <!-- Phone -->
    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvFragmentPhone"
        android:text="—"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"/>

    <Button
        android:id="@+id/btnFragmentViewFullProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View/Edit Full Profile"
        android:layout_marginTop="8dp"/>

</LinearLayout>
</ScrollView>